[project]
name = "parkive"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "cfla1638", email = "cfla1638@outlook.com" }
]
requires-python = ">=3.13"
dependencies = [
    "tomli>=2.4.0",
    "tomli-w>=1.2.0",
    "typer>=0.23.1",
]

[project.scripts]
parkive = "parkive:main"

[build-system]
requires = ["uv_build>=0.9.12,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "build>=1.4.0",
]
